tests/negative/test_attrs_non_type_multi.orb
fnc main () () {
    sym x::foo::foo;
};